# GlyphsImagesBuilder

./: CMakeLists.txt  MyLibConfig.cmake.in  README.md
Test/: test.cpp
include/: GIB.hpp  Plage.hpp
src/: mylib.cpp
